Update Quickstart Guide, fix some typos
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[x] Documentation

--- a/Presentations/images/teaserVolume.graffle/data.plist
+++ b/Presentations/images/teaserVolume.graffle/data.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>ActiveLayerIndex</key>
@@ -19,7 +19,7 @@
 	<key>CanvasOrigin</key>
 	<string>{0, 0}</string>
 	<key>CanvasScale</key>
-	<real>0.85000002384185791</real>
+	<real>0.8399999737739563</real>
 	<key>ColumnAlign</key>
 	<integer>1</integer>
 	<key>ColumnSpacing</key>
@@ -366,7 +366,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{325.984, 751.181}, {226.772, 170.079}}</string>
+			<string>{{325.984, 765.354}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -422,7 +422,7 @@
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{552.756, 836.221}</string>
+				<string>{552.756, 850.394}</string>
 				<string>{581.102, 651.968}</string>
 			</array>
 			<key>Style</key>
@@ -458,7 +458,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{70.8662, 751.181}, {226.772, 170.079}}</string>
+			<string>{{70.8662, 765.354}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -514,7 +514,7 @@
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{70.8662, 836.221}</string>
+				<string>{70.8662, 850.394}</string>
 				<string>{42.5197, 651.968}</string>
 			</array>
 			<key>Style</key>
@@ -750,7 +750,7 @@
 			<key>AllowConnections</key>
 			<string>NO</string>
 			<key>Bounds</key>
-			<string>{{14.1728, 453.543}, {595.276, 496.063}}</string>
+			<string>{{14.1728, 453.543}, {595.276, 510.237}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -945,7 +945,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-10-26 12:11:06 +0200</string>
+	<string>2007-10-28 20:27:36 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -962,13 +962,13 @@
 	<dict>
 		<key>NSBottomMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSLeftMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSPaperSize</key>
 		<array>
@@ -977,13 +977,13 @@
 		</array>
 		<key>NSRightMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSTopMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 	</dict>
 	<key>ReadOnly</key>
@@ -1017,9 +1017,9 @@
 		<key>Frame</key>
 		<string>{{508, 101}, {477, 759}}</string>
 		<key>VisibleRegion</key>
-		<string>{{0, 0}, {672.381, 962}}</string>
+		<string>{{0, 0}, {679.295, 974}}</string>
 		<key>Zoom</key>
-		<real>0.80836492776870728</real>
+		<real>0.8079105019569397</real>
 	</dict>
 </dict>
 </plist>
