--- a/Presentations/images/2D.graffle/data.plist
+++ b/Presentations/images/2D.graffle/data.plist
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>ActiveLayerIndex</key>
 	<integer>0</integer>
+	<key>ApplicationVersion</key>
+	<array>
+		<string>com.omnigroup.OmniGrafflePro</string>
+		<string>129.18</string>
+	</array>
 	<key>AutoAdjust</key>
 	<false/>
 	<key>CanvasColor</key>
@@ -91,8 +96,8 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -100,9 +105,9 @@
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-10
 viewport [ 
-\f1\i \kerning1\expnd-2\expndtw-10
+\i \kerning1\expnd-2\expndtw-10
 upper-right
-\f0\i0 \kerning1\expnd-2\expndtw-10
+\i0 \kerning1\expnd-2\expndtw-10
  ]}</string>
 			</dict>
 		</dict>
@@ -534,7 +539,7 @@ upper-right
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 28.3465}, {155.906, 99.2126}}</string>
+			<string>{{14.1732, 240.945}, {113.386, 85.0394}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -559,7 +564,7 @@ upper-right
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{212.598, 28.3465}, {311.811, 198.424}}</string>
+			<string>{{170.079, 148.819}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -584,7 +589,7 @@ upper-right
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 368.504}, {155.906, 99.2126}}</string>
+			<string>{{14.1732, 340.158}, {113.386, 85.0394}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -609,7 +614,7 @@ upper-right
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 141.732}, {155.906, 99.2126}}</string>
+			<string>{{14.1732, 141.732}, {113.386, 85.0394}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -634,7 +639,7 @@ upper-right
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 255.118}, {155.906, 99.2126}}</string>
+			<string>{{14.1732, 42.5197}, {113.386, 85.0394}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -674,11 +679,11 @@ upper-right
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>5.3595962524414062</real>
+			<real>5.3598480224609375</real>
 			<key>Points</key>
 			<array>
-				<string>{170.079, 304.724}</string>
-				<string>{212.598, 127.558}</string>
+				<string>{127.559, 85.0394}</string>
+				<string>{170.079, 233.858}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -721,11 +726,11 @@ upper-right
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>5.3595962524414062</real>
+			<real>5.35986328125</real>
 			<key>Points</key>
 			<array>
-				<string>{170.079, 418.11}</string>
-				<string>{212.598, 127.558}</string>
+				<string>{127.559, 382.677}</string>
+				<string>{170.079, 233.858}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -768,11 +773,11 @@ upper-right
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>5.3595962524414062</real>
+			<real>5.35986328125</real>
 			<key>Points</key>
 			<array>
-				<string>{170.079, 191.338}</string>
-				<string>{212.598, 127.558}</string>
+				<string>{127.559, 184.252}</string>
+				<string>{170.079, 233.858}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -813,11 +818,11 @@ upper-right
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>5.3596038818359375</real>
+			<real>5.1098480224609375</real>
 			<key>Points</key>
 			<array>
-				<string>{170.079, 77.9528}</string>
-				<string>{212.598, 127.558}</string>
+				<string>{128.059, 283.465}</string>
+				<string>{170.079, 233.858}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -905,8 +910,8 @@ upper-right
 				<key>Pad</key>
 				<integer>3</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1024,8 +1029,8 @@ inputframe "tile.b3"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1033,9 +1038,9 @@ inputframe "tile.b3"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-1\expndtw-4
 viewport [ 
-\f1\i \kerning1\expnd-1\expndtw-4
+\i \kerning1\expnd-1\expndtw-4
 lower-left
-\f0\i0 \kerning1\expnd-1\expndtw-4
+\i0 \kerning1\expnd-1\expndtw-4
  ]\
 \
 \
@@ -1111,8 +1116,8 @@ outputframe "tile.b1"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1120,9 +1125,9 @@ outputframe "tile.b1"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-10
 viewport [ 
-\f1\i \kerning1\expnd-2\expndtw-10
+\i \kerning1\expnd-2\expndtw-10
 lower-right
-\f0\i0 \kerning1\expnd-2\expndtw-10
+\i0 \kerning1\expnd-2\expndtw-10
  ]\
 \
 \
@@ -1198,8 +1203,8 @@ outputframe "tile.b2"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1207,8 +1212,8 @@ outputframe "tile.b2"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-6
 viewport [ 
-\f1\i upper-left
-\f0\i0  ]\
+\i upper-left
+\i0  ]\
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-1\expndtw-2
 \
@@ -1359,7 +1364,7 @@ outputframe "tile.b3"}</string>
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-04-10 09:05:23 +0200</string>
+	<string>2007-11-23 10:12:05 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -1374,8 +1379,8 @@ outputframe "tile.b3"}</string>
 	<dict>
 		<key>NSBottomMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSJobFeatures</key>
 		<array>
@@ -1384,8 +1389,8 @@ outputframe "tile.b3"}</string>
 		</array>
 		<key>NSLeftMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSPagesPerSheet</key>
 		<array>
@@ -1409,13 +1414,13 @@ outputframe "tile.b3"}</string>
 		</array>
 		<key>NSRightMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSTopMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 	</dict>
 	<key>ReadOnly</key>
