--- a/Presentations/images/DB.graffle/data.plist
+++ b/Presentations/images/DB.graffle/data.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>ActiveLayerIndex</key>
@@ -7,7 +7,7 @@
 	<key>ApplicationVersion</key>
 	<array>
 		<string>com.omnigroup.OmniGrafflePro</string>
-		<string>129.15</string>
+		<string>129.18</string>
 	</array>
 	<key>AutoAdjust</key>
 	<false/>
@@ -254,8 +254,8 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -263,9 +263,9 @@
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-10
 range [ 
-\f1\i \kerning1\expnd-2\expndtw-10
+\i \kerning1\expnd-2\expndtw-10
 1st quarter
-\f0\i0 \kerning1\expnd-2\expndtw-10
+\i0 \kerning1\expnd-2\expndtw-10
  ]}</string>
 			</dict>
 		</dict>
@@ -295,7 +295,7 @@ range [
 			<key>Points</key>
 			<array>
 				<string>{694.488, 28.3465}</string>
-				<string>{779.528, 56.6929}</string>
+				<string>{779.527, 56.6929}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -389,7 +389,7 @@ range [
 			<key>Points</key>
 			<array>
 				<string>{694.488, 28.3465}</string>
-				<string>{963.78, 56.6929}</string>
+				<string>{963.779, 56.6929}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -465,7 +465,7 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{963.78, 297.638}</string>
+				<string>{963.779, 297.638}</string>
 				<string>{779.528, 340.157}</string>
 			</array>
 			<key>Style</key>
@@ -556,8 +556,8 @@ range [
 				<key>Pad</key>
 				<integer>3</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -659,8 +659,8 @@ inputframe "frame.b2\
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -668,9 +668,9 @@ inputframe "frame.b2\
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-1\expndtw-4
 range [ 
-\f1\i \kerning1\expnd-1\expndtw-4
+\i \kerning1\expnd-1\expndtw-4
 2nd quarter
-\f0\i0 \kerning1\expnd-1\expndtw-4
+\i0 \kerning1\expnd-1\expndtw-4
  ]\
 \
 \
@@ -753,8 +753,8 @@ outputframe "frame.b1"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -762,9 +762,9 @@ outputframe "frame.b1"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-10
 range [ 
-\f1\i \kerning1\expnd-2\expndtw-10
+\i \kerning1\expnd-2\expndtw-10
 3rd quarter
-\f0\i0 \kerning1\expnd-2\expndtw-10
+\i0 \kerning1\expnd-2\expndtw-10
  ]\
 \
 \
@@ -787,7 +787,7 @@ outputframe "frame.b2"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1176.38, 708.661}, {283.465, 198.425}}</string>
+			<string>{{1176.38, 737.007}, {283.465, 198.425}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -812,7 +812,7 @@ outputframe "frame.b2"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{878.74, 708.661}, {283.465, 198.425}}</string>
+			<string>{{878.74, 737.007}, {283.465, 198.425}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -837,7 +837,7 @@ outputframe "frame.b2"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{581.102, 708.661}, {283.465, 198.425}}</string>
+			<string>{{581.102, 737.007}, {283.465, 198.425}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -862,7 +862,7 @@ outputframe "frame.b2"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{283.465, 708.661}, {283.465, 198.425}}</string>
+			<string>{{283.465, 737.007}, {283.465, 198.425}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -887,7 +887,7 @@ outputframe "frame.b2"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{411.024, 680.315}, {141.732, 28.3465}}</string>
+			<string>{{411.024, 708.661}, {141.732, 28.3465}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FontInfo</key>
@@ -947,8 +947,8 @@ outputframe "frame.b2"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -956,9 +956,9 @@ outputframe "frame.b2"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-10
 range [ 
-\f1\i \kerning1\expnd-2\expndtw-10
+\i \kerning1\expnd-2\expndtw-10
 1st quarter
-\f0\i0 \kerning1\expnd-2\expndtw-10
+\i0 \kerning1\expnd-2\expndtw-10
  ]}</string>
 			</dict>
 		</dict>
@@ -987,8 +987,8 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{396.85, 651.969}</string>
-				<string>{481.89, 680.315}</string>
+				<string>{396.85, 680.315}</string>
+				<string>{481.89, 708.661}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1034,8 +1034,8 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{396.85, 651.969}</string>
-				<string>{1261.42, 680.315}</string>
+				<string>{396.85, 680.315}</string>
+				<string>{1261.42, 708.661}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1081,8 +1081,8 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{396.85, 651.969}</string>
-				<string>{963.78, 680.315}</string>
+				<string>{396.85, 680.315}</string>
+				<string>{963.779, 708.661}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1128,8 +1128,8 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{396.85, 651.969}</string>
-				<string>{666.142, 680.315}</string>
+				<string>{396.85, 680.315}</string>
+				<string>{666.142, 708.661}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1163,8 +1163,8 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{963.78, 921.26}</string>
-				<string>{396.85, 949.606}</string>
+				<string>{963.779, 949.606}</string>
+				<string>{396.85, 977.952}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1205,8 +1205,8 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{666.142, 921.26}</string>
-				<string>{396.85, 935.433}</string>
+				<string>{666.142, 949.606}</string>
+				<string>{396.85, 963.779}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1247,8 +1247,8 @@ range [
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{1261.42, 921.26}</string>
-				<string>{396.85, 963.78}</string>
+				<string>{1261.42, 949.606}</string>
+				<string>{396.85, 992.126}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1278,7 +1278,7 @@ range [
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{269.291, 637.795}, {127.559, 340.157}}</string>
+			<string>{{269.291, 666.141}, {127.559, 340.157}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FontInfo</key>
@@ -1338,8 +1338,8 @@ range [
 				<key>Pad</key>
 				<integer>3</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1372,7 +1372,7 @@ inputframe "frame.b3"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{595.276, 680.315}, {141.732, 240.945}}</string>
+			<string>{{595.276, 708.661}, {141.732, 240.945}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FontInfo</key>
@@ -1432,8 +1432,8 @@ inputframe "frame.b3"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1441,9 +1441,9 @@ inputframe "frame.b3"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-1\expndtw-4
 range [ 
-\f1\i \kerning1\expnd-1\expndtw-4
+\i \kerning1\expnd-1\expndtw-4
 2nd quarter
-\f0\i0 \kerning1\expnd-1\expndtw-4
+\i0 \kerning1\expnd-1\expndtw-4
  ]\
 \
 \
@@ -1466,7 +1466,7 @@ outputframe "frame.b1"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{892.913, 680.315}, {141.732, 240.945}}</string>
+			<string>{{892.913, 708.661}, {141.732, 240.945}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FontInfo</key>
@@ -1526,8 +1526,8 @@ outputframe "frame.b1"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1535,9 +1535,9 @@ outputframe "frame.b1"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-10
 range [ 
-\f1\i \kerning1\expnd-2\expndtw-10
+\i \kerning1\expnd-2\expndtw-10
 3rd quarter
-\f0\i0 \kerning1\expnd-2\expndtw-10
+\i0 \kerning1\expnd-2\expndtw-10
  ]\
 \
 \
@@ -1560,7 +1560,7 @@ outputframe "frame.b2"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1190.55, 680.315}, {141.732, 240.945}}</string>
+			<string>{{1190.55, 708.661}, {141.732, 240.945}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FontInfo</key>
@@ -1620,8 +1620,8 @@ outputframe "frame.b2"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Oblique;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1629,8 +1629,8 @@ outputframe "frame.b2"}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-2\expndtw-6
 range [ 
-\f1\i 4th quarter
-\f0\i0  ]\
+\i 4th quarter
+\i0  ]\
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 \cf1 \kerning1\expnd-1\expndtw-2
 \
@@ -1667,11 +1667,11 @@ outputframe "frame.b3"}</string>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>12.44647216796875</real>
+			<real>19.533096313476562</real>
 			<key>Points</key>
 			<array>
-				<string>{255.118, 602.362}</string>
-				<string>{311.811, 347.244}</string>
+				<string>{240.945, 651.968}</string>
+				<string>{311.811, 375.591}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1714,11 +1714,11 @@ outputframe "frame.b3"}</string>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>12.44647216796875</real>
+			<real>19.2830810546875</real>
 			<key>Points</key>
 			<array>
-				<string>{255.118, 432.283}</string>
-				<string>{311.811, 347.244}</string>
+				<string>{241.445, 467.717}</string>
+				<string>{311.811, 375.591}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1761,11 +1761,11 @@ outputframe "frame.b3"}</string>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>12.44647216796875</real>
+			<real>19.2830810546875</real>
 			<key>Points</key>
 			<array>
-				<string>{255.118, 262.205}</string>
-				<string>{311.811, 347.244}</string>
+				<string>{241.445, 283.465}</string>
+				<string>{311.811, 375.591}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1808,11 +1808,11 @@ outputframe "frame.b3"}</string>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>12.44647216796875</real>
+			<real>19.2830810546875</real>
 			<key>Points</key>
 			<array>
-				<string>{255.118, 92.126}</string>
-				<string>{311.811, 347.244}</string>
+				<string>{241.445, 99.2126}</string>
+				<string>{311.811, 375.591}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1840,7 +1840,7 @@ outputframe "frame.b3"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{311.811, 269.291}, {240.945, 155.905}}</string>
+			<string>{{311.811, 290.551}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1865,7 +1865,7 @@ outputframe "frame.b3"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 14.1732}, {240.945, 155.906}}</string>
+			<string>{{14.1732, 14.1732}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1890,7 +1890,7 @@ outputframe "frame.b3"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 184.252}, {240.945, 155.906}}</string>
+			<string>{{14.1732, 198.425}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1915,7 +1915,7 @@ outputframe "frame.b3"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 524.409}, {240.945, 155.906}}</string>
+			<string>{{14.1732, 566.929}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1940,7 +1940,7 @@ outputframe "frame.b3"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 354.331}, {240.945, 155.905}}</string>
+			<string>{{14.1732, 382.677}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -2109,7 +2109,7 @@ outputframe "frame.b3"}</string>
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-10-18 18:27:09 +0200</string>
+	<string>2007-11-23 10:14:30 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -2124,8 +2124,8 @@ outputframe "frame.b3"}</string>
 	<dict>
 		<key>NSBottomMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSJobFeatures</key>
 		<array>
@@ -2134,8 +2134,8 @@ outputframe "frame.b3"}</string>
 		</array>
 		<key>NSLeftMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSOrientation</key>
 		<array>
@@ -2164,13 +2164,13 @@ outputframe "frame.b3"}</string>
 		</array>
 		<key>NSRightMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSTopMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 	</dict>
 	<key>ReadOnly</key>
