--- a/Presentations/images/UseCases.graffle/data.plist
+++ b/Presentations/images/UseCases.graffle/data.plist
@@ -3190,7 +3190,7 @@
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
-\f0\b\fs36 \cf1 Multipipe Workstations}</string>
+\f0\b\fs36 \cf1 Multi-GPU Platforms}</string>
 			</dict>
 		</dict>
 		<dict>
@@ -3596,7 +3596,7 @@
 			<array>
 				<string>{1348.6, 956.693}</string>
 				<string>{1388.98, 807.874}</string>
-				<string>{1514.69, 782.736}</string>
+				<string>{1539.64, 751.181}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -3625,11 +3625,6 @@
 			<false/>
 			<key>Class</key>
 			<string>LineGraphic</string>
-			<key>Head</key>
-			<dict>
-				<key>ID</key>
-				<integer>994</integer>
-			</dict>
 			<key>ID</key>
 			<integer>988</integer>
 			<key>OrthogonalBarAutomatic</key>
@@ -3639,7 +3634,7 @@
 			<key>Points</key>
 			<array>
 				<string>{1348.6, 970.866}</string>
-				<string>{1314.92, 729.435}</string>
+				<string>{1303.94, 751.181}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -3670,7 +3665,7 @@
 			<array>
 				<dict>
 					<key>Bounds</key>
-					<string>{{1448.81, 605.223}, {135.426, 106.869}}</string>
+					<string>{{1490.59, 619.027}, {100.821, 79.5611}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -3700,7 +3695,7 @@
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{1431.5, 597.515}, {166.385, 185.221}}</string>
+					<string>{{1477.71, 613.289}, {123.869, 137.892}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -3763,7 +3758,7 @@
 			<array>
 				<dict>
 					<key>Bounds</key>
-					<string>{{1280.08, 643.015}, {106.52, 62.8304}}</string>
+					<string>{{1275.24, 621.552}, {159.778, 94.2444}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -3788,7 +3783,7 @@
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{1261.42, 637.795}, {141.732, 91.6405}}</string>
+					<string>{{1247.25, 613.722}, {212.595, 137.459}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -5186,7 +5181,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2008-01-12 13:39:07 +0100</string>
+	<string>2008-02-06 20:46:32 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -5259,7 +5254,7 @@
 		<key>DrawerWidth</key>
 		<real>209</real>
 		<key>Frame</key>
-		<string>{{27, 0}, {1309, 878}}</string>
+		<string>{{29, 0}, {1309, 878}}</string>
 		<key>VisibleRegion</key>
 		<string>{{0, 0}, {2045.07, 1232.73}}</string>
 		<key>Zoom</key>
